tests/tests/snapshots/golden__ir__inventory-system.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "InventorySystem",
  "multi_service": true,
  "services": [
    {
      "id": 0,
      "name": "Catalog"
    },
    {
      "id": 1,
      "name": "Gateway"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Postgres"
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Cache",
      "name": "default",
      "engine": "Redis"
    },
    {
      "id": 2,
      "service": 0,
      "kind": "Auth",
      "name": "default",
      "scheme": "Jwt",
      "issuer": null,
      "audience": null
    },
    {
      "id": 3,
      "service": 0,
      "kind": "Api",
      "name": "Item",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 4,
      "service": 0,
      "kind": "Service",
      "name": "ItemStore",
      "signature": null
    },
    {
      "id": 5,
      "service": 0,
      "kind": "Api",
      "name": "Price",
      "request": 0,
      "config": {
        "method": "Post",
        "path": "/price",
        "scope": null
      }
    },
    {
      "id": 6,
      "service": 0,
      "kind": "Api",
      "name": "Restock",
      "request": 0,
      "config": {
        "method": "Post",
        "path": "/restock",
        "scope": "catalog:restock"
      }
    },
    {
      "id": 7,
      "service": 1,
      "kind": "Auth",
      "name": "default",
      "scheme": "Jwt",
      "issuer": null,
      "audience": null
    },
    {
      "id": 8,
      "service": 1,
      "kind": "Api",
      "name": "Quote",
      "request": 0,
      "config": {
        "method": "Post",
        "path": "/quote",
        "scope": "gateway:quote"
      }
    },
    {
      "id": 9,
      "service": 0,
      "kind": "Service",
      "name": "ComputePrice",
      "signature": null
    },
    {
      "id": 10,
      "service": 0,
      "kind": "Service",
      "name": "ComputeRestock",
      "signature": null
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 3,
      "to": 2,
      "kind": "RequestFlow"
    },
    {
      "id": 1,
      "from": 2,
      "to": 4,
      "kind": "RequestFlow"
    },
    {
      "id": 2,
      "from": 4,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 3,
      "from": 4,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 4,
      "from": 9,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 5,
      "from": 9,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 6,
      "from": 5,
      "to": 9,
      "kind": "RequestFlow"
    },
    {
      "id": 7,
      "from": 10,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 8,
      "from": 10,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 9,
      "from": 6,
      "to": 2,
      "kind": "RequestFlow"
    },
    {
      "id": 10,
      "from": 2,
      "to": 10,
      "kind": "RequestFlow"
    },
    {
      "id": 11,
      "from": 8,
      "to": 7,
      "kind": "RequestFlow"
    },
    {
      "id": 12,
      "from": 7,
      "to": 5,
      "kind": "ServiceCall"
    }
  ],
  "records": [
    {
      "name": "Item",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "name",
          "ty": {
            "type": "Str"
          }
        }
      ],
      "kind": "Data"
    }
  ],
  "tables": [],
  "pipelines": [
    {
      "name": "Price",
      "service": 0,
      "owner": 5,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 9
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Restock",
      "service": 0,
      "owner": 6,
      "payload": 0,
      "steps": [
        {
          "step": "Auth",
          "node": 2
        },
        {
          "step": "Handler",
          "node": 10
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Quote",
      "service": 1,
      "owner": 8,
      "payload": 0,
      "steps": [
        {
          "step": "Auth",
          "node": 7
        },
        {
          "step": "Call",
          "target": 5
        },
        {
          "step": "Return"
        }
      ]
    }
  ],
  "resources": [
    {
      "name": "Item",
      "service_owner": 0,
      "api": 3,
      "service": 4,
      "database": 0,
      "cache": 1,
      "auth": 2,
      "record": 0,
      "config": {
        "cache_ttl": 300,
        "page_size": 100,
        "read_scope": null,
        "write_scope": null
      }
    }
  ],
  "event_streams": []
}
